Now added a more meaningful test.