@@ -3,13 +3,23 @@
  */
 package uk.bl.wa.parsers;
 
-import static org.junit.Assert.fail;
-
+import java.io.ByteArrayInputStream;
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
 import java.net.URL;
 
+import junit.framework.Assert;
+
+import org.apache.tika.exception.TikaException;
 import org.apache.tika.metadata.Metadata;
+import org.jsoup.Jsoup;
+import org.jsoup.nodes.Document;
+import org.jsoup.parser.ParseError;
+import org.jsoup.parser.Parser;
 import org.junit.Before;
 import org.junit.Test;
+import org.xml.sax.SAXException;
 
 /**
  * @author Andrew Jackson <Andrew.Jackson@bl.uk>
@@ -24,6 +34,53 @@ public class HtmlFeatureParserTest {
 	public void setUp() throws Exception {
 	}
 
+	@Test
+	public void JSoupElementsAddedTest() throws Exception {
+		String testHtml = "<b>test<p></b>";
+		String baseUri = "http://example.com/dummy.html";
+		//
+		ByteArrayInputStream stream = new ByteArrayInputStream(
+				testHtml.getBytes());
+		stream.mark(100000);
+		Parser parser = Parser.xmlParser();
+		parser.setTrackErrors(1000);
+		Document doc = Jsoup.parse(stream, null, baseUri, parser);
+		System.out.println("Parsed as:\n" + doc);
+		System.out.println("Got " + parser.getErrors().size()
+				+ " under isTrackErrors = " + parser.isTrackErrors());
+		for (ParseError err : parser.getErrors()) {
+			System.out.println("Got: " + err);
+		}
+
+		// Also run in through the handler class:
+		stream.reset();
+		innerBasicParseTest(stream, baseUri, 2);
+	}
+
+	private static void printMetadata(Metadata metadata) {
+		for (String name : metadata.names()) {
+			for (String value : metadata.getValues(name)) {
+				System.out.println(name + ": " + value);
+			}
+		}
+	}
+
+	private void innerBasicParseTest(InputStream stream, String uri,
+			int numElements)
+			throws IOException, SAXException, TikaException {
+		HtmlFeatureParser hfp = new HtmlFeatureParser();
+		Metadata metadata = new Metadata();
+		metadata.set(Metadata.RESOURCE_NAME_KEY, uri);
+		hfp.parse(stream, null, metadata, null);
+		printMetadata(metadata);
+		// for (ParseError err : hfp.getParseErrors()) {
+		// System.out.println("PARSE-ERROR: " + err);
+		// }
+		Assert.assertEquals("Number of distinct elements was wrong,",
+				numElements,
+				metadata.getValues(HtmlFeatureParser.DISTINCT_ELEMENTS).length );
+	}
+
 	/**
 	 * Test method for
 	 * {@link uk.bl.wa.parsers.HtmlFeatureParser#parse(java.io.InputStream, org.xml.sax.ContentHandler, org.apache.tika.metadata.Metadata, org.apache.tika.parser.ParseContext)}
@@ -34,15 +91,10 @@ public class HtmlFeatureParserTest {
 	@Test
 	public void testParseInputStreamContentHandlerMetadataParseContext()
 			throws Exception {
-		URL url = new URL("http://www.bbc.co.uk/news/magazine-21351017");
-		// url = new URL(
-		// "http://labs.creativecommons.org/2011/ccrel-guide/examples/moremetadata.html");
-		HtmlFeatureParser hfp = new HtmlFeatureParser();
-		Metadata metadata = new Metadata();
-		metadata.set(Metadata.RESOURCE_NAME_KEY, url.toString());
-		hfp.parse(url.openStream(), null, metadata, null);
-		System.out.println("RESULT: " + metadata);
-		fail("Not yet implemented");
+		File ml = new File(
+				"src/test/resources/wikipedia-mona-lisa/Mona_Lisa.html");
+		URL url = ml.toURI().toURL();
+		innerBasicParseTest(url.openStream(), url.toString(), 34);
 	}
 
 }
